[gd_scene load_steps=15 format=3]

[ext_resource type="FontFile" uid="uid://58peuvhwwdw0" path="res://assets/Fontes/Ubuntu Bold (TFF)/Ubuntu-Bold.ttf" id="2_wvooy"]
[ext_resource type="Script" path="res://Scripts/scripts_globais/som_botoes.gd" id="3_kjjlm"]
[ext_resource type="Script" path="res://Scripts/cenas_da_resposta/Certo.gd" id="6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hxvx0"]
bg_color = Color(0.176471, 0.988235, 0.0627451, 1)
border_width_bottom = 30
border_color = Color(0.396078, 0.407843, 0.411765, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2_wvooy")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/65/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0
cache/0/75/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/65/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/65/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/65/0/ascent = 0.0
cache/0/65/0/descent = 0.0
cache/0/65/0/underline_position = 0.0
cache/0/65/0/underline_thickness = 0.0
cache/0/65/0/scale = 1.0
cache/0/65/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/65/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/65/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/65/0/kerning_overrides/65/0 = Vector2(0, 0)
cache/0/65/0/kerning_overrides/60/0 = Vector2(0, 0)
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/60/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/65/0 = Vector2(0, 0)
cache/0/60/0/kerning_overrides/60/0 = Vector2(0, 0)

[sub_resource type="FontVariation" id="FontVariation_xv0gk"]
base_font = ExtResource("2_wvooy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5lnfw"]
bg_color = Color(0, 0.756863, 1, 1)
border_width_bottom = 30
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5m6q"]
bg_color = Color(0.470588, 0.835294, 1, 1)
border_width_bottom = 10
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="FontVariation" id="FontVariation_8b6sf"]
base_font = ExtResource("2_wvooy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0n85"]
bg_color = Color(1, 0, 0, 1)
border_width_bottom = 30
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ep63"]
bg_color = Color(1, 0.664335, 0.611911, 1)
border_width_bottom = 10
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Animation" id="Animation_qs2j7"]
resource_name = "animacao_inicial"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Jogar_Novamente:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1200, 1300), Vector2(77, 1300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Voltar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1200, 1600), Vector2(77, 1600)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pontuacao:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Texto:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_af57w"]
resource_name = "loop_simbolo"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sinal_certo:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sinal_certo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 2.4, 2.8, 3.2, 3.6, 3.8, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(250, -1200), Vector2(250, 130), Vector2(250, 110), Vector2(250, 130), Vector2(250, 110), Vector2(250, 130), Vector2(385, 110), Vector2(1200, 110)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usq44"]
_data = {
"animacao_inicial": SubResource("Animation_qs2j7"),
"loop_simbolo": SubResource("Animation_af57w")
}

[node name="Acertou" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6")
metadata/_edit_lock_ = true

[node name="Fundo" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.141176, 0.807843, 0.0509804, 1)
metadata/_edit_lock_ = true

[node name="sinal_certo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -2160.0
offset_right = 288.06
offset_bottom = -1554.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(280.68, 277.592)
theme_override_styles/panel = SubResource("StyleBoxFlat_hxvx0")

[node name="✓" type="Label" parent="sinal_certo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.5
anchor_right = 0.508
anchor_bottom = 0.5
offset_left = -259.639
offset_top = -402.0
offset_right = 327.361
offset_bottom = 417.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_wvooy")
theme_override_font_sizes/font_size = 600
text = "✓"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Texto" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -478.0
offset_top = -42.0
offset_right = 477.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("5")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_lock_ = true

[node name="Pontuacao" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_top = 0.435417
anchor_right = 1.0
anchor_bottom = 0.465104
offset_bottom = 0.000915527
theme_override_fonts/font = SubResource("5")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_lock_ = true

[node name="Jogar_Novamente" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 658.0
offset_top = 340.0
offset_right = 1588.0
offset_bottom = 590.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_xv0gk")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_5lnfw")
theme_override_styles/hover = SubResource("StyleBoxFlat_5lnfw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d5m6q")
theme_override_styles/disabled = SubResource("StyleBoxFlat_5lnfw")
theme_override_styles/focus = SubResource("StyleBoxFlat_d5m6q")
text = "JOGAR NOVAMENTE"
script = ExtResource("3_kjjlm")
metadata/_edit_lock_ = true

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
offset_left = 1200.0
offset_top = 1600.0
offset_right = 2130.0
offset_bottom = 1850.0
theme_override_fonts/font = SubResource("FontVariation_8b6sf")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_d0n85")
theme_override_styles/hover = SubResource("StyleBoxFlat_d0n85")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3ep63")
theme_override_styles/disabled = SubResource("StyleBoxFlat_d0n85")
theme_override_styles/focus = SubResource("StyleBoxFlat_3ep63")
text = "VOLTAR AO MENU"
script = ExtResource("3_kjjlm")
metadata/_edit_lock_ = true

[node name="voltar_ao_menu" type="Timer" parent="Voltar"]
wait_time = 60.0
autostart = true

[node name="animacao" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_usq44")
}

[connection signal="pressed" from="Jogar_Novamente" to="." method="_on_Jogar_Novamente_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
[connection signal="timeout" from="Voltar/voltar_ao_menu" to="." method="_on_voltar_ao_menu_timeout"]
